# a3-presentation

./: README.md  pyproject.toml
src/: main.py
src/builder/: query_builder.py
