[tool.poetry]
name = "a3-presentation"
version = "0.1.0"
description = "Projeto para apresentação A3Data"
authors = ["srv-gabriel <gas@icomp.ufam.edu.br>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.23.0"
pandas = "^1.4.3"
scikit-learn = "^1.1.1"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
flake8 = "^4.0.1"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
